<resources>
    <string name="app_name">蚂蚁森林能量助手</string>
    <string name="xposed_desc">自动收集蚂蚁森林能量</string>
    <string name="label_loading_setting_response">正在等待Xposed响应&#8230;</string>
    <string name="toast_pleas_select_model">请在Xposed Installer中勾选此模块</string>
    <string name="action_empty">清空</string>
    <string name="action_sort">排序</string>
    <string name="action_sort_date_positive">时间正序</string>
    <string name="action_sort_date_negative">时间倒序</string>
    <string name="action_sort_number_few_more">从少到多</string>
    <string name="action_sort_number_more_few">从多到少</string>
    <string name="app_main_switch">总开关</string>
    <string name="app_child_switch">子开关</string>
    <string name="label_main_switch_summary">请确认在Xposed installer框架中勾选此模块！</string>
    <string name="label_hint">提示</string>
    <string name="label_need_storage">请授予读写存储器权限，否则无法进行后续操作！</string>
    <string name="label_save_config_failure">保存配置失败，您没有授予读写存储器权限！</string>
    <string name="pref_main_switch">pref_main_switch</string>
    <string name="label_auto_collect_energy">自动收集好友能量</string>
    <string name="label_auto_collect_energy_summary">进入蚂蚁森林后自动收集好友能量</string>
    <string name="pref_auto_collect_energy">pref_auto_switch_collect_energy</string>
    <string name="label_auto_help_collect">自动帮助好友收集能量</string>
    <string name="label_auto_help_collect_summary">进入蚂蚁森林后自动帮助好友收集能量</string>
    <string name="pref_auto_help_collect">pref_auto_switch_help_collect</string>
    <string name="label_collect_energy_notification">自动收取失败时发送通知</string>
    <string name="label_collect_energy_notification_summary">当好友能量成熟时，发送通知进行提醒</string>
    <string name="pref_collect_energy_notification">pref_collect_energy_notification</string>
    <string name="label_save_collect_record">保存收集记录</string>
    <string name="pref_save_collect_record">pref_save_collect_record</string>
    <string name="label_look_collect_record">查看收集记录</string>
    <string name="label_bg_collect_interval">后台自动收取时间间隔</string>
    <string name="label_x_min">%1$s分钟</string>
    <string name="pref_look_collect_record">pref_look_collect_record</string>
    <string name="pref_bg_collect_interval">pref_bg_collect_interval</string>
    <string name="title_about">关于</string>
    <string name="title_alipay">支付宝</string>
    <string name="title_donate">捐赠</string>
    <string name="title_exchange">交流</string>
    <string name="title_exchange_summary">QQ群：798584850</string>
    <string name="title_author">作者</string>
    <string name="pref_key_donate">pref_key_donate</string>
    <string name="label_donate_summary">感谢您的支持</string>
    <string name="label_collect_record">收集记录</string>
    <string name="label_collect_record_of_title">偷取%1$s克 帮助收集%2$s克</string>
    <string name="label_friend_name">好友姓名</string>
    <string name="label_operate_type">操作类型</string>
    <string name="label_operate_result">操作结果</string>
    <string name="label_operate_time">操作时间</string>
    <string name="label_no_collect_record">没有获取到收集数据</string>
</resources>
